--- a/gendocs/Makefile
+++ b/gendocs/Makefile
@@ -4,7 +4,7 @@
 # You can set these variables from the command line.
 SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
-SPHINXPROJ    = monitoring
+SPHINXPROJ    = uptimeserver
 SOURCEDIR     = .
 BUILDDIR      = _build
 
